--- a/reclama_app/pubspec.yaml
+++ b/reclama_app/pubspec.yaml
@@ -9,7 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
   shared_preferences: ^2.2.2
+  sqflite: ^2.0.0
+  path: ^1.8.3
+  
+  
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -18,8 +26,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
-assets:
-    - assets/images/Logo.png
+
+
+
+    
 
 
