--- a/reclama_app/pubspec.yaml
+++ b/reclama_app/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   shared_preferences: ^2.2.2
   sqflite: ^2.0.0
   path: ^1.8.3
+  sqflite_common_ffi: ^2.3.0+4
+  sqflite_common_ffi_web: ^0.4.2
+ 
   
   
 
